tests/ui/rust-2018/uniform-paths/ambiguity-macros.stderr
error[E0659]: `std` is ambiguous
  --> $DIR/ambiguity-macros.rs:7:5
   |
LL | use std::io;
   |     ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
   = note: `std` could refer to a built-in crate
   = help: use `::std` to refer to this crate unambiguously
note: `std` could also refer to the module defined here
  --> $DIR/ambiguity-macros.rs:12:9
   |
LL | /         mod std {
LL | |             pub struct io;
LL | |         }
   | |_________^
...
LL |   m!();
   |   ---- in this macro invocation
   = help: use `crate::std` to refer to this module unambiguously
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
